2009-12-04  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Handle parsing CacheModes.

2009-12-04  Jeffrey Stedfast  <fejj@novell.com>

	* stylus.h (enum TouchAction): Added.
	(class TouchDevice): Implemented.
	(class TouchPoint): Implemented.
	(class TouchPointCollection): Implemented.

2009-10-03  Andrew Jorgensen  <ajorgensen@novell.com>

	* Makefile.am: Add textoptions.h

2009-12-03  Jeffrey Stedfast  <fejj@novell.com>

	* runtime.cpp (SetZoomFactor): Stubbed out.

2009-12-03  Jeffrey Stedfast  <fejj@novell.com>

	* brush.cpp (ImageBrush::ImageOpenedEvent): Added.
	(ImageBrush::ImageOpened): Emit our own ImageOpened event.

2009-12-03  Larry Ewing  <lewing@novell.com>

	* media.cpp (Render):
	* mediaelement.cpp (Render): Set the extend mode to pad now that
	we can in the hopes that it will bring us closer to sl rendering.

2009-12-03  Larry Ewing  <lewing@novell.com>

	* media.cpp (Render):
	* mediaelement.cpp (Render): Adjust the rendering bounds in the
	case where RenderSize != actual size this fixes DRT 280.

2009-12-03  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: A single namespace uri can have many prefixes.  ie
	xmlns:foo="My.Namespace" xmlns:bar="My.Namespace"

2009-12-03  Larry Ewing  <lewing@novell.com>

	* Makefile.am (libmoon_include_headers): add textoptions.h to the
	headers.

2009-12-03  Alan McGovern  <amcgovern@novell.com>

	* contentcontrol.cpp: Comment out an extra check when changing
	  the content on a ContentControl which breaks some
	  silverlight toolkit tests.

2009-12-02  Jeffrey Stedfast  <fejj@novell.com>

	* collection.h (enum CollectionIteratorError): New enum to define
	the possible error conditions for the CollectionIterator methods.

	* collection.cpp (CollectionIterator::Next): Now returns bool and
	takes an 'err' argument for error reporting rather than having the
	return value handle everything.
	(CollectionIterator::GetCurrent): Modified to also check index <=
	Count and made the int error argument into a